[package]
name = "sailor"
version = "0.1.0"
authors = ["Noah Hüsser <yatekii@yatekii.ch>"]
edition = "2018"

description = "A sailing navigation application."
documentation = "https://docs.rs/sailor/"
homepage = "https://github.com/Yatekii/sailor"
repository = "https://github.com/Yatekii/sailor"
readme = "README.md"
categories = ["gui", "graphics", "rendering", "visualization", "science"]
keywords = ["sailing", "osm", "gps", "wgpu", "maps"]
license = "MIT OR Apache-2.0"

autobins = false

[lib]
name = "osm"
path = "src/lib/main.rs"

[[bin]]
name = "sailor"
path = "src/bin/main.rs"

[dependencies]
crossbeam-channel = "0.5"
imgui = "0.6"
imgui-wgpu = "0.12"
log = { version = "0.4", features = ["serde"] }
lyon = "0.13"
nalgebra = "0.23"
nalgebra-glm = "0.9"
ncollide2d = "0.26"
nom = "6.0"
notify = "5.0.0-pre.4"
once_cell = "1.4"
# TODO https://github.com/nnethercote/dhat-rs ?
pollster = "0.2"
pretty_env_logger = "0.4"
quick-protobuf = "0.8"
serde = "1.0"
serde_derive = "1.0"
toml = "0.5"
shaderc = "0.7" # TODO naga ? (waaay faster to compile, enough features? upstream asks for bug reports so we could help :)
ureq = "2.0.0-rc3"
varint = "0.9"
wgpu = "0.6"
wgpu_glyph = "0.10"
winit = "0.24"
imgui-winit-support = "0.6"
