[package]
name = "sailor"
version = "0.1.0"
authors = ["Noah Hüsser <yatekii@yatekii.ch>"]
edition = "2018"

description = "A sailing navigation application."
documentation = "https://docs.rs/sailor/"
homepage = "https://github.com/Yatekii/sailor"
repository = "https://github.com/Yatekii/sailor"
readme = "README.md"
categories = ["gui", "graphics", "rendering", "visualization", "science"]
keywords = ["sailing", "osm", "gps", "wgpu", "maps"]
license = "MIT OR Apache-2.0"

autobins = false

[lib]
name = "osm"
path = "src/lib/main.rs"

[[bin]]
name = "sailor"
path = "src/bin/main.rs"

[dependencies]
config = "0.11"
crossbeam-channel = "0.5"
imgui = "0.7"
imgui-wgpu = "0.15"
log = { version = "0.4", features = ["serde"] }
lyon = "0.13"
malloc_size_of_derive = "0.1"
nalgebra = "0.27"
nalgebra-glm = "0.13"
ncollide2d = "0.30"
nom = "6.1"
notify = "5.0.0-pre.8"
once_cell = "1.8"
parity-util-mem = "0.9"
pollster = "0.2"
pretty_env_logger = "0.4"
quick-protobuf = "0.8"
serde = "1.0"
serde_derive = "1.0"
shaderc = "0.7"
ureq = "2.1"
varint = "0.9"
wgpu = "0.8"
wgpu_glyph = "0.12"
winit = "0.24"
imgui-winit-support= "0.7"


[profile.release]
debug = true
